@@ -46,7 +46,7 @@ eof_newline false
 delete_newline_on_delete_to_eol false
 
 # Specifies whether the cursor should be at the end (false) of found text, or the
-# beginning (true).  
+# beginning (true).
 found_cursor_start false
 
 max_clips 30
@@ -56,6 +56,7 @@ max_clips 30
 max_undo_lines 16384
 
 convert_tabs false
+strip_trailing_whitespace_on_save true
 
 diff_command diff -U 5
 
@@ -465,7 +466,7 @@ lang.xml.tokens.comments.open (<!--)
 lang.xml.tokens.comments.close (-->)
 lang.xml.tokens.comments.format 8
 lang.xml.tokens.comments.change_to xml_comment
-lang.xml.comment_string <!-- 
+lang.xml.comment_string <!--
 lang.xml.comment_close_string " -->"
 lang.xml.tokens.template.open \[@--
 lang.xml.tokens.template.close --@\]
@@ -533,7 +534,7 @@ lang.html.tokens.comments.open (<!--)
 lang.html.tokens.comments.close (-->)
 lang.html.tokens.comments.format 8
 lang.html.tokens.comments.change_to html_comment
-lang.html.comment_string <!-- 
+lang.html.comment_string <!--
 lang.html.comment_close_string " -->"
 lang.html.closers.tag.regexp <([^/> ]*)
 lang.html.closers.tag.closer { |m| "</" + m[ 1 ] + ">" }
@@ -587,7 +588,7 @@ lang.css.tokens.colours.format yellow bold
 lang.css.tokens.long_comments.open \/\*
 lang.css.tokens.long_comments.close \*\/
 lang.css.tokens.long_comments.format 8 bold
-lang.css.comment_string /* 
+lang.css.comment_string /*
 lang.css.comment_close_string " */"
 lang.css.tokens.numbers \b([0-9]+\.[0-9]+|[0-9]+)
 lang.css.tokens.numbers.format blue bold
@@ -618,7 +619,7 @@ lang.ruby.tokens.instance_variables (@[A-Za-z_][A-Za-z_0-9]*)
 lang.ruby.tokens.instance_variables.format white bold
 lang.ruby.tokens.comments (#.*)
 lang.ruby.tokens.comments.format 8 bold
-lang.ruby.comment_string # 
+lang.ruby.comment_string #
 lang.ruby.tokens.regular_expressions (\/.+?[^\\]\/)
 lang.ruby.tokens.regular_expressions.format red bold
 lang.ruby.tokens.regular_expressions2 (%r\{.+?[^\}]\})
@@ -685,7 +686,7 @@ lang.php.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.php.tokens.constants.format yellow bold
 lang.php.tokens.comments (\/\/.*)
 lang.php.tokens.comments.format 8 bold
-lang.php.comment_string // 
+lang.php.comment_string //
 lang.php.tokens.preprocessor (^\s*#.*)
 lang.php.tokens.preprocessor.format yellow bold
 lang.php.tokens.non_alphanum ([!@#$%\^&*()\[\]{}/?=+\-\\|,<.>;:])
@@ -720,7 +721,7 @@ lang.perl.format.selection inverse
 lang.perl.format.found yellow inverse
 lang.perl.tokens.comments (#.*)
 lang.perl.tokens.comments.format 8 bold
-lang.perl.comment_string # 
+lang.perl.comment_string #
 lang.perl.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.perl.tokens.constants.format yellow bold
 lang.perl.tokens.non_alphanum [!#^&*()\[\]{}/?=+\-\\|,<.>;:~]
@@ -767,7 +768,7 @@ lang.python.tokens.non_alphanum [@!#$%^&*()\[\]{}/?=+\-\\|,<.>;:~]
 lang.python.tokens.non_alphanum.format white
 lang.python.tokens.comments (#.*)
 lang.python.tokens.comments.format 8 bold
-lang.python.comment_string # 
+lang.python.comment_string #
 lang.python.tokens.doublequoted_strings (\".*?[^\\]\")
 lang.python.tokens.doublequoted_strings.format green bold
 lang.python.tokens.singlequoted_strings ('.*?[^\\]')
@@ -802,7 +803,7 @@ lang.java.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.java.tokens.constants.format yellow bold
 lang.java.tokens.comments (\/\/.*)
 lang.java.tokens.comments.format 8 bold
-lang.java.comment_string // 
+lang.java.comment_string //
 lang.java.tokens.non_alphanum ([!@#$%\^&*()\[\]{}/?=+\-\\|,<.>;:])
 lang.java.tokens.non_alphanum.format white
 lang.java.tokens.long_comments.open \/\*
@@ -840,7 +841,7 @@ lang.c.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.c.tokens.constants.format yellow bold
 lang.c.tokens.comments (\/\/.*)
 lang.c.tokens.comments.format 8 bold
-lang.c.comment_string // 
+lang.c.comment_string //
 lang.c.tokens.preprocessor (^\s*#.*)
 lang.c.tokens.preprocessor.format yellow bold
 lang.c.tokens.non_alphanum ([!@#$%\^&*()\[\]{}/?=+\-\\|,<.>;:])
@@ -868,7 +869,7 @@ lang.conf.tokens.commands ^\s*([^\s=]+)
 lang.conf.tokens.commands.format cyan bold
 lang.conf.tokens.comments (^\s*#.*)
 lang.conf.tokens.comments.format yellow bold
-lang.conf.comment_string # 
+lang.conf.comment_string #
 lang.conf.tokens.doublequoted_strings (\".*?[^\\]\")
 lang.conf.tokens.doublequoted_strings.format green bold
 lang.conf.tokens.singlequoted_strings ('.*?[^\\]')
@@ -886,7 +887,7 @@ lang.crontab.format.selection inverse
 lang.crontab.format.found yellow inverse
 lang.crontab.tokens.comments (^\s*#.*)
 lang.crontab.tokens.comments.format yellow bold
-lang.crontab.comment_string # 
+lang.crontab.comment_string #
 lang.crontab.tokens.schedule ^((?:[0-9\/*,-]+\s+){5})
 lang.crontab.tokens.schedule.format cyan bold
 lang.crontab.tokens.commands ^(\S+=.+)
@@ -902,7 +903,7 @@ lang.fstab.format.selection inverse
 lang.fstab.format.found yellow inverse
 lang.fstab.tokens.comments (^\s*#.*)
 lang.fstab.tokens.comments.format yellow bold
-lang.fstab.comment_string # 
+lang.fstab.comment_string #
 lang.fstab.indent.size 4
 lang.fstab.indent.auto true
 lang.fstab.indent.roundup true
@@ -927,7 +928,7 @@ lang.sql.tokens.data_types.case_insensitive \b(BIT|BOOLEAN|CHAR|CHARACTER|DATE|D
 lang.sql.tokens.data_types.format brown
 lang.sql.tokens.comments (--.*)
 lang.sql.tokens.comments.format 8 bold
-lang.sql.comment_string -- 
+lang.sql.comment_string --
 lang.sql.tokens.singlequoted_strings ('.*?[^\\]')
 lang.sql.tokens.singlequoted_strings.format green bold
 lang.sql.tokens.non_alphanum ([!@#$%\^&*()\[\]{}/?=+\-\\|,<.>;:])
@@ -953,7 +954,7 @@ lang.bash.indent.roundup true
 lang.bash.tabsize 4
 lang.bash.tokens.comments (^\s*#.*)
 lang.bash.tokens.comments.format 8 bold
-lang.bash.comment_string # 
+lang.bash.comment_string #
 lang.bash.tokens.singlequoted_strings ('.*?[^\\]')
 lang.bash.tokens.singlequoted_strings.format green bold
 lang.bash.tokens.doublequoted_strings (\".*?[^\\]\")
@@ -979,7 +980,7 @@ lang.tcl.indent.roundup true
 lang.tcl.tabsize 4
 lang.tcl.tokens.comments (^\s*#.*)
 lang.tcl.tokens.comments.format 8 bold
-lang.tcl.comment_string # 
+lang.tcl.comment_string #
 lang.tcl.tokens.reserved_words \b(encoding|incr|pid|tcl_endOfWord|Tcl|eof|info|tcl_findLibrary|after|error|interp|pkg_mkIndex|tcl_startOfNextWord|append|eval|join|proc|tcl_startOfPreviousWord|array|exec|lappend|puts|tcl_wordBreakAfter|auto_execok|exit|lassign|pwd|tcl_wordBreakBefore|auto_import|expr|lindex|re_syntax|tcltest|auto_load|fblocked|linsert|read|tclvars|auto_mkindex|fconfigure|list|regexp|tell|auto_mkindex_old|fcopy|llength|registry|time|auto_qualify|file|load|regsub|trace|auto_reset|fileevent|lrange|rename|unknown|bgerror|filename|lrepeat|resource|unload|binary|flush|lreplace|return|unset|break|for|lsearch|scan|update|catch|foreach|lset|seek|uplevel|cd|format|lsort|set|upvar|clock|gets|memory|socket|variable|close|glob|msgcat|source|vwait|concat|global|namespace|split|while|continue|history|open|string|dde|http|package|subst|dict|if|parray|switch)\b
 lang.tcl.tokens.reserved_words.format white
 lang.tcl.tokens.non_alphanum ([!@#$%\^&*()\[\]{}/?=+\-\\|,<.>;:])
@@ -1052,7 +1053,7 @@ lang.yaml.tokens.directive_indicator ^(%.*)
 lang.yaml.tokens.directive_indicator.format 10
 lang.yaml.tokens.comment_indicator (#.+)
 lang.yaml.tokens.comment_indicator.format 8 bold
-lang.yaml.comment_string # 
+lang.yaml.comment_string #
 lang.yaml.tokens.anchor_indicator (&\w+)
 lang.yaml.tokens.anchor_indicator.format red bold
 lang.yaml.tokens.alias_indicator (\*\w+)
